Fixes #57